# axum-partitions-sqlx

./: .env  Cargo.toml  README.md  db.rs  schema.sql
SeaOrm/: genre.rs
src/: auth.rs  db.rs  error.rs  flash.rs  genres_hdl.rs  globals.rs  helpers_hdl.rs  login_hdl.rs  main.rs  model.rs  partition.rs  persons.rs  router.rs  sign_up_hdl.rs
src/auth/: jwt.rs  mod.rs  session.rs
src/db/: connect.rs  genres.rs  mod.rs  musicians.rs  partitions.rs  users.rs
src/handlers/: genres_hdl.rs  helpers_hdl.rs  list_users_hdl.rs  login_hdl.rs  mod.rs  musicians_hdl.rs  partitions_hdl.rs  sign_up_hdl.rs
src/models/: genre.rs  mod.rs  musician.rs  partition.rs  user.rs
src/utils/: auth_utils.rs  mod.rs  print_request_response.rs
templates/: about.html  about.html.tera  base.html  base.html.tera  edit_person.html.tera  genres.html  genres.html.tera  list_genres.html  list_genres.html.tera  list_musicians.html  list_partitions.html  list_partitions.html.tera  list_users.html  list_users.html.tera  login.html  login.html.tera  new_person.html.tera  partitions.html  partitions.html.tera  persons.html  persons.html.tera  sign_up.html  sign_up.html.tera  start.html.tera
templates/error/: 404.html.tera  void.html.tera
