
[package]
name = "axum-jwt"
version = "0.1.0"
edition = "2021"
author = "LeonGGX"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.4", features = ["headers"]}
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
headers = "0.3"
tera = "1.15.0"
tower = "0.4.11"
tower-cookies = "0.4.1"
tower-http = { version = "0.2", features = ["fs", "add-extension", "trace"] }
anyhow = "1.0.53"
dotenv = "0.15.0"
sqlx = { version = "0.5.10", features = ["runtime-tokio-native-tls" , "postgres", "uuid"] }
axum-debug = "0.3.2"
thiserror = "1.0.30"
jsonwebtoken = "8.0.1"
once_cell = "1.9.0"
sha3 = "0.10.1"
uuid = { version ="0.8.2", features = ["serde", "v4"] }
secrecy = "0.8.0"
base64 = "0.13.0"
unicode-segmentation = "1.9.0"
