
[package]
name = "axum-jwt"
version = "0.1.0"
edition = "2021"
author = "LeonGGX"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Primary crates

#axum = { version = "0.6.0-rc.2", features = ["headers", "macros"]}
axum = { version = "0.5.16", features = ["headers", "macros"]}

tokio = { version = "1.0", features = ["full"] }
#sqlx = { version = "0.6", features = ["runtime-tokio-native-tls" , "postgres", "uuid"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls" , "postgres", "uuid"] }

# Important secondary crates
argon2 = "0.4.1"
#rand = "0.8.5"
rand = {version = "0.8", features = ["min_const_gen"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version ="1.1.2", features = ["serde", "v4"] }
chrono = "0.4.19"
secrecy = "0.8.0"
base64 = "0.13.0"
unicode-segmentation = "1.9.0"

# Auxiliary crates
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
lazy_static = "1.4.0"
thiserror = "1.0.30"
jsonwebtoken = "8.0.1"
once_cell = "1.9.0"
sha3 = "0.10.1"

headers = "0.3"
tera = "1.15.0"
tower = "0.4.11"
tower-cookies = { version = "0.6.0", features = ["axum-core"]}
tower-http = { version = "0.2", features = ["fs", "add-extension", "trace"] }
anyhow = "1.0.53"
dotenvy = "0.15.1"

rand_chacha = "0.3.1"
rand_core = { version = "0.6", features = ["std"] }


# axum dedicated crates
axum-debug = "0.3.2"
axum-macros = "0.2.0"
axum-flash = "0.5.0"
axum-extra = {version ="0.3.1", features = ["spa"]}
#axum-login = { version="0.2.0", features = ["postgres", "sqlx"]}

axum-sessions = "0.3.1"
async-sqlx-session = {version = "0.4.0", features = ["pg"]}
async-session = "3.0.0"
pbkdf2 = "0.11.0"

axum_database_sessions = "4.1.0"
hyper = "0.14.20"

